# img2svg-studio

./: .gitignore  .oxlintrc.json  .prettierignore  Cargo.toml  LICENSE.md  README.md  SYMBIOSIS.md  TASKS.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: check.yml
THIRD_PARTY_LICENSES/: VISIONCORTEX-ATTRIBUTIONS.md  VISIONCORTEX-MIT.txt  VTRACER-MIT.txt
crates/img2svg-core/: Cargo.toml
crates/img2svg-wasm/: Cargo.toml
docs/: APPS_SDK.md  ARCHITECTURE.md  CODEMAP.md  DECISIONS.md  ENGINEERING_STANDARDS.md  HANDBOOK.md  PRODUCT_SPEC.md  PROJECT_BRIEF.md  SUBMISSION.md  TECHNICAL_SPEC.md  TEST_STRATEGY_REVIEW.md  THIRD_PARTY.md  TYPESCRIPT_7.md  VECTORIZATION_FEATURE_REVIEW.md
docs/release/: DEMO_SCRIPT.md  DEPLOYMENT.md  LOGO_OPTIMIZATION.md  RELEASE_AUDIT.md  TOPOGRAPHY_BENCHMARK.md  VISIONCORTEX_AUDIT.md
fixtures/demo/: README.md
fixtures/shape-recognition/: README.md  manifest.json
integrations/img2-download/: README.md  _headers  tool-capability-map.test.ts  tool-capability-map.ts  webmcp.js
mcp/: package.json  tsconfig.json
mcp/src/: connected-region.ts  http-server.ts  image-input.test.ts  image-input.ts  image-region-service.test.ts  image-region-service.ts  (+13 more)
scripts/: check-rust.ts  check-source-lines.test.ts  check-source-lines.ts  ci-workflow.test.ts  submission-docs.test.ts  typescript-platform.test.ts
web/: index.html  package-lock.json  package.json  playwright.config.ts  playwright.demo.config.ts  playwright.screenshots.config.ts  submission-screenshots.spec.ts  tsconfig.json  vite.config.ts
(+214 files in other folders)
