[workspace]
members = ["crates/img2svg-core", "crates/img2svg-wasm"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.91"
version = "0.1.0"

[workspace.dependencies]
js-sys = { version = "=0.3.103", default-features = false }
png = "=0.18.1"
serde = "=1.0.229"
serde_json = "=1.0.150"
visioncortex = "=0.8.10"
wasm-bindgen = "=0.2.126"
